// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> with 1 column 1`] = `
.c1 {
  padding: 15px 0;
  box-sizing: border-box;
  width: 100%;
}

.c0 {
  margin: -15px 0;
}

@media (min-width:568px) {
  .c1 {
    padding: 15px;
  }
}

@media (min-width:568px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: -15px;
  }
}

<Grid>
  <Primitive
    className="c0"
  >
    <div
      className="c0"
    >
      <GridElement
        width={1}
      >
        <Primitive
          className="c1"
          width={1}
        >
          <div
            className="c1"
            width={1}
          >
            Item 1
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={1}
      >
        <Primitive
          className="c1"
          width={1}
        >
          <div
            className="c1"
            width={1}
          >
            Item 2
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={1}
      >
        <Primitive
          className="c1"
          width={1}
        >
          <div
            className="c1"
            width={1}
          >
            Item 3
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={1}
      >
        <Primitive
          className="c1"
          width={1}
        >
          <div
            className="c1"
            width={1}
          >
            Item 4
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={1}
      >
        <Primitive
          className="c1"
          width={1}
        >
          <div
            className="c1"
            width={1}
          >
            Item 5
          </div>
        </Primitive>
      </GridElement>
    </div>
  </Primitive>
</Grid>
`;

exports[`<Grid /> with 2 columns 1`] = `
.c1 {
  padding: 15px 0;
  box-sizing: border-box;
  width: 50%;
}

.c0 {
  margin: -15px 0;
}

@media (min-width:568px) {
  .c1 {
    padding: 15px;
  }
}

@media (min-width:568px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: -15px;
  }
}

<Grid>
  <Primitive
    className="c0"
  >
    <div
      className="c0"
    >
      <GridElement
        width={0.5}
      >
        <Primitive
          className="c1"
          width={0.5}
        >
          <div
            className="c1"
            width={0.5}
          >
            Item 1
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.5}
      >
        <Primitive
          className="c1"
          width={0.5}
        >
          <div
            className="c1"
            width={0.5}
          >
            Item 2
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.5}
      >
        <Primitive
          className="c1"
          width={0.5}
        >
          <div
            className="c1"
            width={0.5}
          >
            Item 3
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.5}
      >
        <Primitive
          className="c1"
          width={0.5}
        >
          <div
            className="c1"
            width={0.5}
          >
            Item 4
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.5}
      >
        <Primitive
          className="c1"
          width={0.5}
        >
          <div
            className="c1"
            width={0.5}
          >
            Item 5
          </div>
        </Primitive>
      </GridElement>
    </div>
  </Primitive>
</Grid>
`;

exports[`<Grid /> with 3 columns 1`] = `
.c1 {
  padding: 15px 0;
  box-sizing: border-box;
  width: 33.33333333333333%;
}

.c0 {
  margin: -15px 0;
}

@media (min-width:568px) {
  .c1 {
    padding: 15px;
  }
}

@media (min-width:568px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: -15px;
  }
}

<Grid>
  <Primitive
    className="c0"
  >
    <div
      className="c0"
    >
      <GridElement
        width={0.3333333333333333}
      >
        <Primitive
          className="c1"
          width={0.3333333333333333}
        >
          <div
            className="c1"
            width={0.3333333333333333}
          >
            Item 1
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.3333333333333333}
      >
        <Primitive
          className="c1"
          width={0.3333333333333333}
        >
          <div
            className="c1"
            width={0.3333333333333333}
          >
            Item 2
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.3333333333333333}
      >
        <Primitive
          className="c1"
          width={0.3333333333333333}
        >
          <div
            className="c1"
            width={0.3333333333333333}
          >
            Item 3
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.3333333333333333}
      >
        <Primitive
          className="c1"
          width={0.3333333333333333}
        >
          <div
            className="c1"
            width={0.3333333333333333}
          >
            Item 4
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.3333333333333333}
      >
        <Primitive
          className="c1"
          width={0.3333333333333333}
        >
          <div
            className="c1"
            width={0.3333333333333333}
          >
            Item 5
          </div>
        </Primitive>
      </GridElement>
    </div>
  </Primitive>
</Grid>
`;

exports[`<Grid /> with 3 columns and span 1`] = `
.c2 {
  padding: 15px 0;
  box-sizing: border-box;
  width: 33.33333333333333%;
}

.c1 {
  padding: 15px 0;
  box-sizing: border-box;
  width: 66.66666666666666%;
}

.c0 {
  margin: -15px 0;
}

@media (min-width:568px) {
  .c2 {
    padding: 15px;
  }
}

@media (min-width:568px) {
  .c1 {
    padding: 15px;
  }
}

@media (min-width:568px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: -15px;
  }
}

<Grid>
  <Primitive
    className="c0"
  >
    <div
      className="c0"
    >
      <GridElement
        width={0.6666666666666666}
      >
        <Primitive
          className="c1"
          width={0.6666666666666666}
        >
          <div
            className="c1"
            width={0.6666666666666666}
          >
            Item 1
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.3333333333333333}
      >
        <Primitive
          className="c2"
          width={0.3333333333333333}
        >
          <div
            className="c2"
            width={0.3333333333333333}
          >
            Item 2
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.3333333333333333}
      >
        <Primitive
          className="c2"
          width={0.3333333333333333}
        >
          <div
            className="c2"
            width={0.3333333333333333}
          >
            Item 3
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.3333333333333333}
      >
        <Primitive
          className="c2"
          width={0.3333333333333333}
        >
          <div
            className="c2"
            width={0.3333333333333333}
          >
            Item 4
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.3333333333333333}
      >
        <Primitive
          className="c2"
          width={0.3333333333333333}
        >
          <div
            className="c2"
            width={0.3333333333333333}
          >
            Item 5
          </div>
        </Primitive>
      </GridElement>
    </div>
  </Primitive>
</Grid>
`;

exports[`<Grid /> with 4 columns 1`] = `
.c1 {
  padding: 15px 0;
  box-sizing: border-box;
  width: 25%;
}

.c0 {
  margin: -15px 0;
}

@media (min-width:568px) {
  .c1 {
    padding: 15px;
  }
}

@media (min-width:568px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: -15px;
  }
}

<Grid>
  <Primitive
    className="c0"
  >
    <div
      className="c0"
    >
      <GridElement
        width={0.25}
      >
        <Primitive
          className="c1"
          width={0.25}
        >
          <div
            className="c1"
            width={0.25}
          >
            Item 1
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.25}
      >
        <Primitive
          className="c1"
          width={0.25}
        >
          <div
            className="c1"
            width={0.25}
          >
            Item 2
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.25}
      >
        <Primitive
          className="c1"
          width={0.25}
        >
          <div
            className="c1"
            width={0.25}
          >
            Item 3
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.25}
      >
        <Primitive
          className="c1"
          width={0.25}
        >
          <div
            className="c1"
            width={0.25}
          >
            Item 4
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.25}
      >
        <Primitive
          className="c1"
          width={0.25}
        >
          <div
            className="c1"
            width={0.25}
          >
            Item 5
          </div>
        </Primitive>
      </GridElement>
    </div>
  </Primitive>
</Grid>
`;

exports[`<Grid /> with 5 columns 1`] = `
.c1 {
  padding: 15px 0;
  box-sizing: border-box;
  width: 20%;
}

.c0 {
  margin: -15px 0;
}

@media (min-width:568px) {
  .c1 {
    padding: 15px;
  }
}

@media (min-width:568px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: -15px;
  }
}

<Grid>
  <Primitive
    className="c0"
  >
    <div
      className="c0"
    >
      <GridElement
        width={0.2}
      >
        <Primitive
          className="c1"
          width={0.2}
        >
          <div
            className="c1"
            width={0.2}
          >
            Item 1
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.2}
      >
        <Primitive
          className="c1"
          width={0.2}
        >
          <div
            className="c1"
            width={0.2}
          >
            Item 2
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.2}
      >
        <Primitive
          className="c1"
          width={0.2}
        >
          <div
            className="c1"
            width={0.2}
          >
            Item 3
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.2}
      >
        <Primitive
          className="c1"
          width={0.2}
        >
          <div
            className="c1"
            width={0.2}
          >
            Item 4
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.2}
      >
        <Primitive
          className="c1"
          width={0.2}
        >
          <div
            className="c1"
            width={0.2}
          >
            Item 5
          </div>
        </Primitive>
      </GridElement>
    </div>
  </Primitive>
</Grid>
`;

exports[`<Grid /> with custom Grid and GridElement elements 1`] = `
.c1 {
  padding: 15px 0;
  box-sizing: border-box;
  width: 50%;
}

.c0 {
  margin: -15px 0;
}

@media (min-width:568px) {
  .c1 {
    padding: 15px;
  }
}

@media (min-width:568px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: -15px;
  }
}

<Grid
  element="article"
>
  <Primitive
    className="c0"
    element="article"
  >
    <article
      className="c0"
    >
      <GridElement
        element="section"
        width={0.5}
      >
        <Primitive
          className="c1"
          element="section"
          width={0.5}
        >
          <section
            className="c1"
            width={0.5}
          >
            Item 1
          </section>
        </Primitive>
      </GridElement>
      <GridElement
        element="section"
        width={0.5}
      >
        <Primitive
          className="c1"
          element="section"
          width={0.5}
        >
          <section
            className="c1"
            width={0.5}
          >
            Item 2
          </section>
        </Primitive>
      </GridElement>
      <GridElement
        element="section"
        width={0.5}
      >
        <Primitive
          className="c1"
          element="section"
          width={0.5}
        >
          <section
            className="c1"
            width={0.5}
          >
            Item 3
          </section>
        </Primitive>
      </GridElement>
      <GridElement
        element="section"
        width={0.5}
      >
        <Primitive
          className="c1"
          element="section"
          width={0.5}
        >
          <section
            className="c1"
            width={0.5}
          >
            Item 4
          </section>
        </Primitive>
      </GridElement>
      <GridElement
        element="section"
        width={0.5}
      >
        <Primitive
          className="c1"
          element="section"
          width={0.5}
        >
          <section
            className="c1"
            width={0.5}
          >
            Item 5
          </section>
        </Primitive>
      </GridElement>
    </article>
  </Primitive>
</Grid>
`;

exports[`<Grid /> with custom Grid element 1`] = `
.c1 {
  padding: 15px 0;
  box-sizing: border-box;
  width: 50%;
}

.c0 {
  margin: -15px 0;
}

@media (min-width:568px) {
  .c1 {
    padding: 15px;
  }
}

@media (min-width:568px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: -15px;
  }
}

<Grid
  element="article"
>
  <Primitive
    className="c0"
    element="article"
  >
    <article
      className="c0"
    >
      <GridElement
        width={0.5}
      >
        <Primitive
          className="c1"
          width={0.5}
        >
          <div
            className="c1"
            width={0.5}
          >
            Item 1
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.5}
      >
        <Primitive
          className="c1"
          width={0.5}
        >
          <div
            className="c1"
            width={0.5}
          >
            Item 2
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.5}
      >
        <Primitive
          className="c1"
          width={0.5}
        >
          <div
            className="c1"
            width={0.5}
          >
            Item 3
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.5}
      >
        <Primitive
          className="c1"
          width={0.5}
        >
          <div
            className="c1"
            width={0.5}
          >
            Item 4
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={0.5}
      >
        <Primitive
          className="c1"
          width={0.5}
        >
          <div
            className="c1"
            width={0.5}
          >
            Item 5
          </div>
        </Primitive>
      </GridElement>
    </article>
  </Primitive>
</Grid>
`;

exports[`<Grid /> with initial props 1`] = `
.c0 {
  margin: -15px 0;
}

@media (min-width:568px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: -15px;
  }
}

<Grid>
  <Primitive
    className="c0"
  >
    <div
      className="c0"
    />
  </Primitive>
</Grid>
`;

exports[`<Grid /> with responsive columns 1`] = `
.c1 {
  padding: 15px 0;
  box-sizing: border-box;
}

.c0 {
  margin: -15px 0;
}

@media (min-width:568px) {
  .c1 {
    width: 50%;
  }
}

@media (min-width:768px) {
  .c1 {
    width: 33.33333333333333%;
  }
}

@media (min-width:960px) {
  .c1 {
    width: 25%;
  }
}

@media (min-width:1220px) {
  .c1 {
    width: 20%;
  }
}

@media (min-width:568px) {
  .c1 {
    padding: 15px;
  }
}

@media (min-width:568px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: -15px;
  }
}

<Grid>
  <Primitive
    className="c0"
  >
    <div
      className="c0"
    >
      <GridElement
        width={
          Object {
            "lg": 0.25,
            "md": 0.3333333333333333,
            "sm": 0.5,
            "xlg": 0.2,
          }
        }
      >
        <Primitive
          className="c1"
          width={
            Object {
              "lg": 0.25,
              "md": 0.3333333333333333,
              "sm": 0.5,
              "xlg": 0.2,
            }
          }
        >
          <div
            className="c1"
            width={
              Object {
                "lg": 0.25,
                "md": 0.3333333333333333,
                "sm": 0.5,
                "xlg": 0.2,
              }
            }
          >
            First Element
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={
          Object {
            "lg": 0.25,
            "md": 0.3333333333333333,
            "sm": 0.5,
            "xlg": 0.2,
          }
        }
      >
        <Primitive
          className="c1"
          width={
            Object {
              "lg": 0.25,
              "md": 0.3333333333333333,
              "sm": 0.5,
              "xlg": 0.2,
            }
          }
        >
          <div
            className="c1"
            width={
              Object {
                "lg": 0.25,
                "md": 0.3333333333333333,
                "sm": 0.5,
                "xlg": 0.2,
              }
            }
          >
            Second Element
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={
          Object {
            "lg": 0.25,
            "md": 0.3333333333333333,
            "sm": 0.5,
            "xlg": 0.2,
          }
        }
      >
        <Primitive
          className="c1"
          width={
            Object {
              "lg": 0.25,
              "md": 0.3333333333333333,
              "sm": 0.5,
              "xlg": 0.2,
            }
          }
        >
          <div
            className="c1"
            width={
              Object {
                "lg": 0.25,
                "md": 0.3333333333333333,
                "sm": 0.5,
                "xlg": 0.2,
              }
            }
          >
            Third Element
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={
          Object {
            "lg": 0.25,
            "md": 0.3333333333333333,
            "sm": 0.5,
            "xlg": 0.2,
          }
        }
      >
        <Primitive
          className="c1"
          width={
            Object {
              "lg": 0.25,
              "md": 0.3333333333333333,
              "sm": 0.5,
              "xlg": 0.2,
            }
          }
        >
          <div
            className="c1"
            width={
              Object {
                "lg": 0.25,
                "md": 0.3333333333333333,
                "sm": 0.5,
                "xlg": 0.2,
              }
            }
          >
            Fourth Element
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={
          Object {
            "lg": 0.25,
            "md": 0.3333333333333333,
            "sm": 0.5,
            "xlg": 0.2,
          }
        }
      >
        <Primitive
          className="c1"
          width={
            Object {
              "lg": 0.25,
              "md": 0.3333333333333333,
              "sm": 0.5,
              "xlg": 0.2,
            }
          }
        >
          <div
            className="c1"
            width={
              Object {
                "lg": 0.25,
                "md": 0.3333333333333333,
                "sm": 0.5,
                "xlg": 0.2,
              }
            }
          >
            Fifth Element
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={
          Object {
            "lg": 0.25,
            "md": 0.3333333333333333,
            "sm": 0.5,
            "xlg": 0.2,
          }
        }
      >
        <Primitive
          className="c1"
          width={
            Object {
              "lg": 0.25,
              "md": 0.3333333333333333,
              "sm": 0.5,
              "xlg": 0.2,
            }
          }
        >
          <div
            className="c1"
            width={
              Object {
                "lg": 0.25,
                "md": 0.3333333333333333,
                "sm": 0.5,
                "xlg": 0.2,
              }
            }
          >
            Sixth Element
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={
          Object {
            "lg": 0.25,
            "md": 0.3333333333333333,
            "sm": 0.5,
            "xlg": 0.2,
          }
        }
      >
        <Primitive
          className="c1"
          width={
            Object {
              "lg": 0.25,
              "md": 0.3333333333333333,
              "sm": 0.5,
              "xlg": 0.2,
            }
          }
        >
          <div
            className="c1"
            width={
              Object {
                "lg": 0.25,
                "md": 0.3333333333333333,
                "sm": 0.5,
                "xlg": 0.2,
              }
            }
          >
            Seventh Element
          </div>
        </Primitive>
      </GridElement>
      <GridElement
        width={
          Object {
            "lg": 0.25,
            "md": 0.3333333333333333,
            "sm": 0.5,
            "xlg": 0.2,
          }
        }
      >
        <Primitive
          className="c1"
          width={
            Object {
              "lg": 0.25,
              "md": 0.3333333333333333,
              "sm": 0.5,
              "xlg": 0.2,
            }
          }
        >
          <div
            className="c1"
            width={
              Object {
                "lg": 0.25,
                "md": 0.3333333333333333,
                "sm": 0.5,
                "xlg": 0.2,
              }
            }
          >
            Eighth Element
          </div>
        </Primitive>
      </GridElement>
    </div>
  </Primitive>
</Grid>
`;
